Modification des liens de redirection dans le fichier index.html Modification des liens de redirection dans le fichier recipes/cookies.html Modification des liens de redirection dans le fichier recipes/lasagna.html Modification des liens de redirection dans le fichier recipes/cookies.html

--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -9,7 +9,7 @@
         <nav>
             <ul>
                 <li><a href="../index.html">Accueil</a></li>
-                <li><a href="cookies.html">Cookies</a></li>
+                <li><a href="pancakes.html">Cookies</a></li>
                 <li><a href="lasagna.html">Lasagna</a></li>
             </ul>
         </nav>
