--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -11,7 +11,7 @@
             <ul>
                 <li><a href="../index.html">Accueil</a></li>
                 <li><a href="cookies.html">Cookies</a></li>
-                <li><a href="lasagna.html">Lasagna</a></li>
+                <li><a href="pancakes.html">Pancakes</a></li>
             </ul>
         </nav>
     </header>
