--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Pancakes Recipe</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <nav>
